gitignoreファイル追加

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
 __pycache__/
 *.pyc
+# Python のキャッシュ
 ll_env/
+# 仮想環境は絶対に Git に入れない
 .env
+# 環境変数ファイル/APIキーやパスワードが漏れないように
+
+# Django
+*.sqlite3
+# ローカルDBは個人ごとに違うので Git に入れない
+*.log
+# ログには機密情報が含まれることがある
